# Lexicon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  start.bat  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml
backend/: ai_prefs.py  inference.py  languagetool.py  launcher.py  lexicon.spec  main.py  model_manager.py  requirements.txt
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: AiSetupModal.jsx  App.jsx  CustomToolsSettings.jsx  DictionaryPanel.jsx  Editor.jsx  FormatToolbar.jsx  ImportExportMenu.jsx  LanguageDropdown.jsx  ModelManager.jsx  OnboardingModal.jsx  ReviewPanel.jsx  Settings.jsx  SuggestionCard.jsx  Toggle.jsx  Toolbar.jsx  UpdateBanner.jsx  UpdateModal.jsx  api.js  grammarCache.js  grammarHighlight.js  hashUtils.js  index.css  prompts.js  slashCommand.js  updater.js  useTransform.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
website/: _headers  index.html  llms.txt  robots.txt  script.js  security.txt  sitemap.xml  styles.css
